# OneMu

./: CMakeLists.txt  LICENSE.txt  README.md
cmakecfg/: android.cmake
examples/Cpp/CamLearn/: main.cpp
examples/FaceDetection/: Face Detection.cpp  haarcascade_frontalface_alt.txt
examples/FastLearn/Android/: .gitignore  README.md  build.gradle  local.properties
examples/FastLearn/Android/app/: build.gradle
examples/FastLearn/Android/app/src/main/: AndroidManifest.xml
examples/FastLearn/Android/app/src/main/java/com/oneVipas/onedetector/: Base64.java  CameraPreview.java  CameraPreviewActivity.java  ExistingRecordActivity.java  LoginActivity.java  MenulistActivity.java  ServerControl.java  ServerDone.java  SplashActivity.java
examples/FastLearn/Android/app/src/main/jni/: Android.mk  Application.mk  OneDetectorJni.c
examples/FastLearn/Android/app/src/main/jni/cv/include/: MarkCascadeModel_40x25.h  cvapp.h  cvaux.h  cvbase.h  cvcore.h  cvplatform.h  cvtypes.h
examples/FastLearn/Android/app/src/main/res/layout/: activity_camera_preview.xml  activity_existing_record.xml  activity_login.xml  activity_menulist.xml  activity_prompts.xml  activity_prompts2.xml  activity_splash.xml
examples/FastLearn/Android/app/src/main/res/menu/: camera_preview.xml  existing_record.xml  login.xml  menulist.xml  splash.xml
examples/FastLearn/Android/app/src/main/res/values/: strings.xml
examples/FastLearn/CamLearn/: main.cpp
examples/HelloMu/Linux/: Makefile  helloMu.c
examples/Linux/HelloMu/: helloMu.c
examples/TestModule/: CMakeLists.txt  README  logger.c  logger.h  testModule.c  testModule.h  testMuBase.c  testMuCore.c
mucore/: CMakeLists.txt
mucore/include/: muAux.h  muBase.h  muCore.h  muPlatform.h  muTypes.h
mucore/src/: muBase.c  muColortransform.c  muComponent.c  muEdge.c  muFilter.c  muHistogram.c  muImgwarp.c  muLogic.c  muMatching.c  muMorphological.c  muMotion.c  muThreshold.c
mugadget/: CMakeLists.txt
mugadget/include/: muGadget.h  muObjectLearning.h
mugadget/src/: muBackgroundmodeling.c  muCameratampering.c  muExaminator.c  muObjectLearning.c  muObjectdetector.c  muPirisanalyze.c  muPtzgettarget.c  muPtztracking.c  muSadtracking.c  muSadtripwirecounting.c  muSadtripzone.c  sadtracking.h
prebuilt/Windows/x86/vc10/lib/: OneMu.lib  OneMuD.lib  OneMuGadget.lib  OneMuGadgetD.lib
